--- a/src/main/resources/assets/productivebees/lang/en_us.json
+++ b/src/main/resources/assets/productivebees/lang/en_us.json
@@ -780,6 +780,8 @@
   "entity.productivebees.froststeel_bee": "Froststeel Bee",
   "entity.productivebees.regalium_bee": "Regalium Bee",
   "entity.productivebees.forgotten_bee": "Forgotten Bee",
+  "entity.productivebees.azure_silver_bee": "Azure Silver Bee",
+  "entity.productivebees.crimson_iron_bee": "Crimson Iron Bee",
   "entity.productivebees.villager_bee": "Mistake",
   "fluid_type.productivebees.honey": "Honey",
   "item.productivebees.bee_bomb": "Bee Bomb",
