--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,14 @@
+1.21.1-13.6.4
+
+- Added a second tier of speed upgrades
+
+
+1.21.1-13.6.3
+
+- Fixed performance issues with ambered mob rendering when having Iris installed
+- Fixed even more crash from spawning invalid bees
+
+
 1.21.1-13.6.2
 
 - Added Azure Silver and Crimson Iron bees from Silent Gear (Lego)
@@ -6,6 +17,8 @@
 - Fixed production upgrade modifier (stellanera98)
 - Fixed GT Bees (Satherov)
 - Fixed comb blocks not using custom recipes in heated centrifuges
+- Fixed Hop Graphite bee spawn egg recipe
+- Added Fluix dust to Fluix bee output
 
 
 1.21.1-13.6.1
