--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,11 @@
-fix pollen tag
 water bucket to fish bucket recipes
-increase Monazite output
-obsidian shard as output
-remove endurance from prismarine
-remove or fix GT recipes
 
 redo configs
 look into changing BeeNBTChangerRecipe to BeeComponentChangerRecipe
 
 1.22
-- geckolib model support
 - butcher bee
+- smelter bee
 - sim support for cubee
 - move configs into recipes
 - no insert cage when not sim
